ie9 sidebar h5 alignment fix

--- a/less/framework/ie.less
+++ b/less/framework/ie.less
@@ -499,6 +499,7 @@
   // type.less Overrides
   // ------------------------
   h5.sidebar-title {
+  	margin-left: -9px;
   	filter: none;
   	background: #fdfefe left bottom repeat-x url(../img/bg-hdr-grey.png);
   }
